--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                          <img src="assets/images/ug-logo-244x122.png" alt="Mobirise" title="" style="height: 5rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://tainonline.uog.edu.gy/srms/student/current/registration/login.php"><span class="mbri-left mbr-iconfont mbr-iconfont-btn" style="font-size: 21px;">&nbsp; Back to Academic Profile</span></a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://tainonline.uog.edu.gy/srms/student/current/registration/login.php"><span class="mbri-left mbr-iconfont mbr-iconfont-btn">&nbsp;</span></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com"><br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Course: ECN 1100<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;USI: 1234567<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Grade: F &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
+                    <a class="nav-link link text-white display-4" href="https://tainonline.uog.edu.gy/srms/student/current/registration/login.php"><br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Course: ECN 1100<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;USI: 1234567<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Grade: F &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
                 </li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
